--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Odin Recipes</h1>
 
     <img src="https://images.pexels.com/photos/3597065/pexels-photo-3597065.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" width="1000" height="800">
-   <p><strong><em>I am le tired</em></strong></p>
+   <p><strong><em>Breakfast Foods</em></strong></p>
 
    <a href="../odin-recipes/recipes/eggs.html">Scrambled Eggs</a><br>
    <a href="../odin-recipes/recipes/pancakes.html">Pancakes</a><br>
